fixing icon issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3538,7 +3538,7 @@ button {
 .smKatieicon{
   background-image: url("./assets/Images/150\ wide\ alusa\ design\ logo.png");
   background-size: cover;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-left: 5px;
   height: 55px;
   width: 250px;
